--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,6 @@ body {
   border: 2px solid #fff;
 }
 
-.aria {
-  font-style: bold;
-}
-
 .logo {
   font-size: 20px;
   font-weight: bold;
@@ -49,7 +45,7 @@ body {
 }
 
 .black {
-  color: #000000;
+  color: black;
 }
 
 .red {
@@ -79,7 +75,7 @@ body {
 
 .title {
   font-size: 40px;
-  font-weight: 100;
+  font: weight 100px;
   color: #ec5242;
   margin-top: 100px;
   margin-bottom: 50px;
@@ -88,9 +84,9 @@ body {
 h1 {
   display: flex;
   font-size: 65px;
-  font-weight: bolderbold;
+  font-weight: bold;
   font-family: "COCOGOOSE", sans-serif;
-  line-height: 9dvh;
+  line-height: 9vh;
   color: #ec5242;
 }
 
