--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ body {
   background-size: contain;
 }
 
+.main2 {
+  background-image: url(images/desktop-bg-img.png);
+  background-size: contain;
+}
+
 .program {
   background-color: #272a31;
   background-image: url(images/cross.svg);
@@ -43,6 +48,17 @@ body {
   font-size: 20px;
   font-weight: bold;
   display: flex;
+}
+
+.logo2 {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 50px;
+  font-weight: bold;
+  display: flex;
+  border: #050c1e2d solid 1px;
+  padding: 50px;
+  background-color: white;
 }
 
 .hero {
@@ -114,8 +130,17 @@ h3 {
   font-size: 15px;
   font-weight: 20;
   font-family: "COCOGOOSE", sans-serif;
-  color: rgba(128, 128, 128, 0.744);
+  color: #272a31;
 }
+.red-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
 #seewhole {
   text-decoration: underline;
 }
@@ -129,6 +154,7 @@ h3 {
 }
 
 #contact {
+  margin-top: 40px;
   margin-left: 200px;
   margin-right: 200px;
 }
@@ -145,4 +171,53 @@ button {
 .join {
   display: flex;
   justify-content: center;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+li {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#ccgLogo {
+  color: #272a31;
+  font-size: 20px;
+}
+
+hr {
+  height: 2px;
+  background-color: #edeff5;
+  border: none;
+}
+
+#past {
+  margin-top: 50px;
+  font-size: x-large;
+  margin-bottom: 60px;
+  position: relative;
+  overflow: hidden;
+}
+
+#past img {
+  position: relative;
+}
+
+#takelook {
+  font-size: small;
+  color: grey;
+  margin-bottom: 30px;
+}
+
+.red-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 0, 0, 0.5);
 }
