--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,33 @@ body {
 html,
 body {
   overflow-x: hidden;
+  background-image: url(images/desktop-bg-img.png);
+  background-size: contain;
+}
+
+.partners {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #272a31;
+  padding-bottom: 50px;
+}
+
+.partners img {
+  width: 100px; /* or any desired width */
+  height: auto; /* maintain the aspect ratio */
+  margin: 0 30px;
+}
+
+.fspeak {
+  font-size: 25px;
+  font-weight: 400;
+  padding-top: 0%;
 }
 
 .main {
-  height: 1962px;
-  background-image: url(images/desktop-bg-img.png);
-  background-size: contain;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .main2 {
@@ -22,6 +43,7 @@ body {
   background-color: #272a31;
   background-image: url(images/cross.svg);
   background-size: 38px;
+  padding-bottom: 60px;
 }
 
 .partner {
@@ -45,9 +67,10 @@ body {
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
   display: flex;
+  margin-left: 134px;
 }
 
 .logo2 {
@@ -81,10 +104,27 @@ body {
 }
 
 .transparent {
+  display: flex;
+  font-size: 55px;
   background-image: url(/images/redOrange.png);
   -webkit-text-fill-color: transparent;
   background-clip: border-box;
   -webkit-background-clip: text;
+}
+
+.trans {
+  font-size: 50px;
+  line-height: 52px;
+}
+/* 
+#nav {
+  margin-right: 50px;
+  margin-left: 50px;
+} */
+
+.box {
+  border: solid white 1px;
+  padding-right: 0%;
 }
 
 #FB {
@@ -102,9 +142,9 @@ body {
 
 .title {
   font-size: 40px;
-  font-weight: bold;
+  font-weight: normal;
   color: #ec5242;
-  margin-top: 100px;
+  margin-top: 40px;
   margin-bottom: 50px;
 }
 
@@ -135,6 +175,7 @@ h3 {
 
 #seewhole {
   text-decoration: underline;
+  padding-top: 20px;
 }
 
 #about {
@@ -158,6 +199,7 @@ button {
   margin-bottom: 30px;
   border: none;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .join {
@@ -212,4 +254,41 @@ hr {
   right: 0;
   bottom: 0;
   background-color: rgba(255, 0, 0, 0.5);
+}
+
+.under::after {
+  content: "";
+  display: block;
+  border-bottom: 1px solid;
+  border-color: #ec5242;
+  width: 45px;
+  margin: 10px auto 0;
+}
+
+@media (min-width: 769px) {
+  button {
+    display: none;
+  }
+}
+
+.foot {
+  padding-top: 50px;
+  margin-left: 150px;
+  margin-right: 250px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 1cm;
+  place-items: center;
+}
+
+.foot2 {
+  background-color: #272a31;
+  color: white;
+  padding-top: 50px;
+  margin-left: 230px;
+  margin-right: 230px;
+  padding-bottom: 60px;
+  display: grid;
+  grid-template-columns: auto auto;
+  place-items: center;
 }
