--- a/styles.css
+++ b/styles.css
@@ -232,17 +232,22 @@ h3 {
 }
 
 #about {
+  display: flex;
+
   background-color: white;
   font-size: 14px;
   border: #edeff5 solid 1px;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
 
-#contact {
+.contact {
+  display: flex;
+  justify-content: center;
   margin-top: 40px;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 button {
